[gd_scene load_steps=14 format=3 uid="uid://qch2pjx3fkou"]

[ext_resource type="Script" uid="uid://c01am23ws41e3" path="res://Scripts/enemy.gd" id="1_1f0kj"]
[ext_resource type="Texture2D" uid="uid://c0140uwnvf5" path="res://Assets/alien_idle.png" id="2_0830c"]
[ext_resource type="PackedScene" uid="uid://cikrjh2h0qfhp" path="res://Scenes/health_component.tscn" id="4_287tu"]
[ext_resource type="PackedScene" uid="uid://b61ob44vsw1jx" path="res://Scenes/movement_component.tscn" id="4_0830c"]
[ext_resource type="PackedScene" uid="uid://mi7337ddly84" path="res://Scenes/hitbox_component.tscn" id="5_0830c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ghaa6"]
atlas = ExtResource("2_0830c")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dp5w"]
atlas = ExtResource("2_0830c")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_auwsv"]
atlas = ExtResource("2_0830c")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8uf12"]
atlas = ExtResource("2_0830c")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_po0sg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghaa6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dp5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_auwsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8uf12")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1f0kj"]
size = Vector2(17, 29)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0830c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ghaa6"]
size = Vector2(20, 2)

[node name="Enemy" type="CharacterBody2D"]
texture_filter = 1
script = ExtResource("1_1f0kj")

[node name="EnemySprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_po0sg")
animation = &"idle"

[node name="Remote" type="RemoteTransform2D" parent="EnemySprite"]
remote_path = NodePath("../../HitboxComponent")

[node name="EnemyCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_1f0kj")

[node name="HealthComponent" parent="." instance=ExtResource("4_287tu")]
collision_layer = 16
collision_mask = 0
health = 5

[node name="HurtboxCollision" type="CollisionShape2D" parent="HealthComponent"]
position = Vector2(0.5, 0)
shape = SubResource("CapsuleShape2D_0830c")

[node name="MovementComponent" parent="." instance=ExtResource("4_0830c")]

[node name="HitboxComponent" parent="." instance=ExtResource("5_0830c")]
visible = false
collision_layer = 0
collision_mask = 4
damage = 1
canAttack = false

[node name="HitboxCollision" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(21, 1)
shape = SubResource("RectangleShape2D_ghaa6")
